# CodeBase

./: .gitignore  README.md  build.gradle  package.json  pom.xml  settings.gradle
.github/workflows/: test.yml
js-code/: package.json  path.js  process.js  server.js  test.txt
js-code/src/: dir.js  douplx.js  event.js  events.js  stream.js  test.txt  writeStream.js
rust-code/: Cargo.toml
rust-code/basic-code/: Cargo.toml
rust-code/basic-code/src/: lib.rs  main.rs
rust-code/closure/src/: main.rs
rust-code/src/async_future/: Cargo.toml
rust-code/src/async_future/src/: lib.rs  main.rs
rust-code/src/basic/: Cargo.toml
rust-code/src/basic/src/: lib.rs  main.rs
rust-code/src/draw/src/: main.rs
rust-code/src/server/: Cargo.toml
rust-code/src/server/src/: main.rs
src/main/java/jhlz/code/: CodeBaseApplication.java  WatchFolder.java
src/main/java/jhlz/code/config/: ThreadConfig.java
src/main/java/jhlz/code/controller/: WebController.java
src/main/java/jhlz/code/design/: Singleton01.java
src/main/java/jhlz/code/entity/: Apple.java  Client.java  User.java  UserModel.java
src/main/java/jhlz/code/feature/: ApplePredicate.java  ApplePredicateImpl.java  FunctionalProgramming.java  Test01.java
src/main/java/jhlz/code/thread/: LockTest.java  (+4 more)
src/main/java/jhlz/test/: MyTest.java
src/main/kotlin/jhlz/code/: Main.kt  MainKt.kt  SecondKt.kt
src/main/resources/: application.yml
src/test/java/: FeatureTest.java  JDKTest.java  MyLinkedListTest.java  SpringTest.java
src/test/java/jhlz/code/: GeneratorImageTest.java  JDKTest.java  WatchFolderTest.java
(+31 files in other folders)
